  - Unchecked memory allocation in wsman_init_plugins(), p->ifc
  - Unchecked memory allocation in mem_double(), newptr
  - Unchecked memory allocation in dictionary_new(), d, d->val, d->key, d->hash
  - Unchecked memory allocation in u_error_new(), *error
  - sighup_handler() in wsmand.c uses unsafe functions in a signal handler
- Bindings
  - support rdoc 2.1 in Ruby bindings
  - cmake: use PYTHON_INCLUDE_DIRS

2.4.3
- Bugfixes
  - Fix bindings for Java 1.5
  - Raise exception if client creation fails (bindings)

2.4.2
- Standards compliance
  - Honor WS-Management 1.1.1 standard (line 739)
    Disable multiple MessageID checks
- Bugfixes
  - Fix crash in redirect module (typo)

2.4.1
- Build fixes
  - Builds now on SLES11 (cmake 2.4), Fedora 18
  - Fedora 19
    - needs rubypick package
    - has empty ruby_version in CONFIG
  - fix Ruby gem, include version.rb

2.4.0
- Features
  - Add support for OptionSet in SOAP header (breaks ABI)
  - Increase soversion of libwsman_client to 2.0.0
  - new function wsmc_add_option
  - Redirect plugin: Added facilities to import the redirection
    details from an included file (Praveen K Paladugu)
- Bugfixes
  - wsman_transport_set_verify_host passed wrong values to CURL
  - recognize 'Msvc' (Hyper V) and 'DCIM' (Dell Drac) CIM schemata
  - xml_parser_element_dump: fix pointer (github issue #8)
- Bindings
  - Ruby: Fix Ruby 1.9 threading locks for wsmc_action_* functions
  - Ruby: API change: Transport.verify_{host,peer}? return Boolean now
      Transport.verify_peer -> Transport.verify_peer?
      Transport.verify_host -> Transport.verify_host?
  - Support for OptionSet
    - ClientOptions#add_option
    - ClientOptions#options= (Ruby)
  - XmlDoc#to_s returns non-indented xml representation
  - Ruby: Accessors for OptionSet, Selectors, and Properties
    - ClientOptions#options
    - ClientOptions#properties
    - ClientOptions#selectors
  - Define security delivery modes (WSMAN_DELIVERY_SEC_*)